smartide-pipeline/ingress-el-trigger-listener-smartide-cli.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-el-trigger-listener-smartide-cli
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: el-trigger-listener-smartide-cli-dev.smartide.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: el-trigger-listener-smartide-cli
                port:
                  number: 8080
